fix overlapping

--- a/socialapp/src/components/Posts/ExplorePostCard.css
+++ b/socialapp/src/components/Posts/ExplorePostCard.css
@@ -1,6 +1,6 @@
 .post-card-explore {
     width:20rem;
-    height:20rem;
+    height:18rem;
     margin-block: 10px;
     border-color: none;
 }
